--- a/assets/custom-product-grid.css
+++ b/assets/custom-product-grid.css
@@ -130,6 +130,16 @@
     .product-grid__container-prev{
         left: 0;
     }
+
+    .product-grid__header--title {
+        font-size: 34px;
+        line-height: 40px;
+    }
+    
+    .product-grid__header--subtitle {
+        font-size: 20px;
+        line-height: 26px;
+    }
 }
 
 @media only screen and (max-width: 428px) {
